feat: edit index.html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>HTML, CSS & Git Basics</title>
 </head>
 <body>
-
-
-  <h1>Test</h1>
-
+<h1>Test</h1>
 </body>
 </html> 
