--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 <title>HTML, CSS & Git Basics</title>
 </head>
 <body>
 <h1>Test</h1>
 </body>
-</html> 
+</html>
