feat: edit index.html file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<title>HTML, CSS & Git Basics</title>
+<title>Anton Myasnikov | rsschool-cv</title>
 </head>
 <body>
-<h1>Test</h1>
+<h1>Anton Myasnikov</h1>
 </body>
 </html>
