--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 <title>Anton Myasnikov | rsschool-cv</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <h1>Anton Myasnikov</h1>
